--- a/src/components/strat/form.css
+++ b/src/components/strat/form.css
@@ -1,11 +1,42 @@
+.strategy_Form {
+    padding-left: 5em;
+    padding-top: 3em;
+    padding-right: 5em;
+    padding-bottom: 3em;
+}
+
 .selectedSite {
     height: 400px;
     width: 650px;
+    position: fixed;
+    top: 30%;
+    left: 50%;
+}
+
+.siteSelection{
+    height: 400px;
+    width: 650px;
+    position: fixed;
+    top: 20%;
+    left: 50%;
+}
+
+.operatorSelection {
+    height: 100%;
+    width: 650px;
+    position: fixed;
+    top:45;
+    padding-top: 40px;
+}
+
+.operatorSelectionText {
+    padding-bottom: 1em;
 }
 
 .selectedMap {
     height: 200px;
-    width: 350px
+    width: 350px;
+
 }
 
 .opIcon {
@@ -13,3 +44,31 @@
     width: 50px;
 }
 
+.mapSelection {
+    position: fixed;
+    top: 05%;
+    left: 50%;
+    
+}
+
+.roleDescription {
+    position: fixed;
+    padding-top: 3em;
+    bottom: 11em;
+    padding-left: 59.75em;
+
+}
+
+.operatorRole {
+    padding-left: 25%;
+    width: 250px;
+    display: flex;
+    
+    
+}
+
+.h2 {
+    position: fixed;
+    top: 05%;
+    left: 50%;
+}
