--- a/src/components/strat/list.css
+++ b/src/components/strat/list.css
@@ -1,5 +1,6 @@
 body {
     background-image: url("https://www.pcgamesn.com/wp-content/uploads/2021/04/rainbow-six-siege-north-star.jpg");
+    opacity: .85;
 }
 
 .strategiesList {
